; ModuleID = '/home/carl/AnghaBench/i3/src/extr_xcb.c_create_window.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_xcb.c_create_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32, i32, i32, i32 }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_12__ = type { %struct.TYPE_10__ }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32 }

@XCB_WINDOW_CLASS_INPUT_ONLY = common dso_local global i64 0, align 8
@XCB_COPY_FROM_PARENT = common dso_local global i8* null, align 8
@root = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Could not create window. Error code: %d.\0A\00", align 1
@xcursor_supported = common dso_local global i64 0, align 8
@XCB_CW_CURSOR = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [7 x i8] c"cursor\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @create_window(i32* %0, i64 %1, i64 %2, i64 %3, i8* %4, i64 %5, i32 %6, i32 %7, i8* %8, i8** %9) #0 {
  %11 = alloca %struct.TYPE_13__, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i8*, align 8
  %19 = alloca i8**, align 8
  %20 = alloca i8*, align 8
  %21 = alloca i32, align 4
  %22 = alloca %struct.TYPE_11__*, align 8
  %23 = alloca i8*, align 8
  %24 = alloca %struct.TYPE_12__, align 4
  %25 = alloca i32, align 4
  %26 = bitcast %struct.TYPE_13__* %11 to { i64, i64 }*
  %27 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %26, i32 0, i32 0
  store i64 %1, i64* %27, align 4
  %28 = getelementptr inbounds { i64, i64 }, { i64, i64 }* %26, i32 0, i32 1
  store i64 %2, i64* %28, align 4
  store i32* %0, i32** %12, align 8
  store i64 %3, i64* %13, align 8
  store i8* %4, i8** %14, align 8
  store i64 %5, i64* %15, align 8
  store i32 %6, i32* %16, align 4
  store i32 %7, i32* %17, align 4
  store i8* %8, i8** %18, align 8
  store i8** %9, i8*** %19, align 8
  %29 = load i32*, i32** %12, align 8
  %30 = call i8* @xcb_generate_id(i32* %29)
  store i8* %30, i8** %20, align 8
  %31 = load i64, i64* %15, align 8
  %32 = load i64, i64* @XCB_WINDOW_CLASS_INPUT_ONLY, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %38

34:                                               ; preds = %10
  %35 = load i8*, i8** @XCB_COPY_FROM_PARENT, align 8
  %36 = ptrtoint i8* %35 to i64
  store i64 %36, i64* %13, align 8
  %37 = load i8*, i8** @XCB_COPY_FROM_PARENT, align 8
  store i8* %37, i8** %14, align 8
  br label %38

38:                                               ; preds = %34, %10
  %39 = load i32*, i32** %12, align 8
  %40 = load i64, i64* %13, align 8
  %41 = load i8*, i8** %20, align 8
  %42 = load i32, i32* @root, align 4
  %43 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 3
  %44 = load i32, i32* %43, align 4
  %45 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 2
  %46 = load i32, i32* %45, align 4
  %47 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 1
  %48 = load i32, i32* %47, align 4
  %49 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = load i64, i64* %15, align 8
  %52 = load i8*, i8** %14, align 8
  %53 = load i8*, i8** %18, align 8
  %54 = load i8**, i8*** %19, align 8
  %55 = call i32 @xcb_create_window(i32* %39, i64 %40, i8* %41, i32 %42, i32 %44, i32 %46, i32 %48, i32 %50, i32 0, i64 %51, i8* %52, i8* %53, i8** %54)
  store i32 %55, i32* %21, align 4
  %56 = load i32*, i32** %12, align 8
  %57 = load i32, i32* %21, align 4
  %58 = call %struct.TYPE_11__* @xcb_request_check(i32* %56, i32 %57)
  store %struct.TYPE_11__* %58, %struct.TYPE_11__** %22, align 8
  %59 = load %struct.TYPE_11__*, %struct.TYPE_11__** %22, align 8
  %60 = icmp ne %struct.TYPE_11__* %59, null
  br i1 %60, label %61, label %66

61:                                               ; preds = %38
  %62 = load %struct.TYPE_11__*, %struct.TYPE_11__** %22, align 8
  %63 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 4
  %65 = call i32 @ELOG(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %64)
  br label %66

66:                                               ; preds = %61, %38
  %67 = load i64, i64* @xcursor_supported, align 8
  %68 = icmp ne i64 %67, 0
  br i1 %68, label %69, label %80

69:                                               ; preds = %66
  %70 = load i8*, i8** @XCB_CW_CURSOR, align 8
  store i8* %70, i8** %18, align 8
  %71 = load i32, i32* %16, align 4
  %72 = call i8* @xcursor_get_cursor(i32 %71)
  %73 = load i8**, i8*** %19, align 8
  %74 = getelementptr inbounds i8*, i8** %73, i64 0
  store i8* %72, i8** %74, align 8
  %75 = load i32*, i32** %12, align 8
  %76 = load i8*, i8** %20, align 8
  %77 = load i8*, i8** %18, align 8
  %78 = load i8**, i8*** %19, align 8
  %79 = call i32 @xcb_change_window_attributes(i32* %75, i8* %76, i8* %77, i8** %78)
  br label %110

80:                                               ; preds = %66
  %81 = load i32*, i32** %12, align 8
  %82 = call i8* @xcb_generate_id(i32* %81)
  store i8* %82, i8** %23, align 8
  %83 = call i32 @load_font(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 0)
  %84 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %85 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %84, i32 0, i32 0
  %86 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %85, i32 0, i32 0
  store i32 %83, i32* %86, align 4
  %87 = load i32, i32* %16, align 4
  %88 = call i32 @xcursor_get_xcb_cursor(i32 %87)
  store i32 %88, i32* %25, align 4
  %89 = load i32*, i32** %12, align 8
  %90 = load i8*, i8** %23, align 8
  %91 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %92 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %91, i32 0, i32 0
  %93 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %92, i32 0, i32 0
  %94 = load i32, i32* %93, align 4
  %95 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %96 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %95, i32 0, i32 0
  %97 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %96, i32 0, i32 0
  %98 = load i32, i32* %97, align 4
  %99 = load i32, i32* %25, align 4
  %100 = load i32, i32* %25, align 4
  %101 = add nsw i32 %100, 1
  %102 = call i32 @xcb_create_glyph_cursor(i32* %89, i8* %90, i32 %94, i32 %98, i32 %99, i32 %101, i32 0, i32 0, i32 0, i32 65535, i32 65535, i32 65535)
  %103 = load i32*, i32** %12, align 8
  %104 = load i8*, i8** %20, align 8
  %105 = load i8*, i8** @XCB_CW_CURSOR, align 8
  %106 = call i32 @xcb_change_window_attributes(i32* %103, i8* %104, i8* %105, i8** %23)
  %107 = load i32*, i32** %12, align 8
  %108 = load i8*, i8** %23, align 8
  %109 = call i32 @xcb_free_cursor(i32* %107, i8* %108)
  br label %110

110:                                              ; preds = %80, %69
  %111 = load i32, i32* %17, align 4
  %112 = icmp ne i32 %111, 0
  br i1 %112, label %113, label %117

113:                                              ; preds = %110
  %114 = load i32*, i32** %12, align 8
  %115 = load i8*, i8** %20, align 8
  %116 = call i32 @xcb_map_window(i32* %114, i8* %115)
  br label %117

117:                                              ; preds = %113, %110
  %118 = load i8*, i8** %20, align 8
  ret i8* %118
}

declare dso_local i8* @xcb_generate_id(i32*) #1

declare dso_local i32 @xcb_create_window(i32*, i64, i8*, i32, i32, i32, i32, i32, i32, i64, i8*, i8*, i8**) #1

declare dso_local %struct.TYPE_11__* @xcb_request_check(i32*, i32) #1

declare dso_local i32 @ELOG(i8*, i32) #1

declare dso_local i8* @xcursor_get_cursor(i32) #1

declare dso_local i32 @xcb_change_window_attributes(i32*, i8*, i8*, i8**) #1

declare dso_local i32 @load_font(i8*, i32) #1

declare dso_local i32 @xcursor_get_xcb_cursor(i32) #1

declare dso_local i32 @xcb_create_glyph_cursor(i32*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @xcb_free_cursor(i32*, i8*) #1

declare dso_local i32 @xcb_map_window(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
